--- a/index.html
+++ b/index.html
@@ -407,11 +407,11 @@
             </div>
 
             <div class="suggested-image">
-                <h3>🖼️ Imagen sugerida</h3>
+                <h3> "La escuela de Atenas! de Rafael Sanzio</h3>
                 <div class="athens-container">
                     <img src="images/escuela-atenas.jpg" alt="La escuela de Atenas" class="athens-image">
                     <div class="athens-overlay">
-                        <h4>"La escuela de Atenas" – Rafael Sanzio</h4>
+                        
                         <p>Una obra que representa el saber colectivo, la pregunta como motor, y la escucha entre pares. Ideal como fondo para cierre o reflexión final.</p>
                         <div class="final-question">
                             <em>¿Cuál es tu lugar en esta nueva escuela de Atenas digital?</em>
